javadoc and more sonar cleanup
Signed-off-by: Justin Florentine <justin+github@florentine.us>